# tachyon

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_AUDIT.md  PROJECTS.md  README.md  config.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
crates/tachyon-app/: Cargo.toml
crates/tachyon-app/src/: cli.rs  gui.rs  main.rs
crates/tachyon-bench/: Cargo.toml
crates/tachyon-bench/benches/: frame_plan.rs  newline_index.rs  search.rs  trace_window.rs
crates/tachyon-bench/src/: lib.rs
crates/tachyon-core/: Cargo.toml
crates/tachyon-core/src/: lib.rs
crates/tachyon-ingest/: Cargo.toml
crates/tachyon-ingest/src/: lib.rs
crates/tachyon-render/: Cargo.toml
crates/tachyon-render/src/: lib.rs
crates/tachyon-search/: Cargo.toml
crates/tachyon-search/src/: lib.rs
crates/tachyon-trace/: Cargo.toml
crates/tachyon-trace/src/: lib.rs
docs/: FEATURES.md  UPDATES.md
packaging/linux/: tachyon.desktop
scripts/: bench_report.sh  gen_synthetic_logs.sh  perf_smoke.sh
src/components/: tachyonView.tsx
src/modules/: tachyon-core.ts
