[workspace]
members = [
    "crates/tachyon-core",
    "crates/tachyon-ingest",
    "crates/tachyon-search",
    "crates/tachyon-render",
    "crates/tachyon-trace",
    "crates/tachyon-app",
    "crates/tachyon-bench",
]
resolver = "2"

[workspace.package]
version = "0.1.10"
edition = "2024"
license = "MIT"
authors = ["Tachyon Contributors"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
directories = "6.0"
eframe = { version = "0.31", default-features = true }
image = { version = "0.25", default-features = false, features = ["png"] }
memmap2 = "0.9"
memchr = "2.7"
rayon = "1.10"
regex = "1.11"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
