[package]
name = "tachyon-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
tachyon-core = { path = "../tachyon-core" }
tachyon-ingest = { path = "../tachyon-ingest" }
tracing.workspace = true
tracing-subscriber.workspace = true
