[package]
name = "tachyon-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
tachyon-core = { path = "../tachyon-core" }
tachyon-ingest = { path = "../tachyon-ingest" }
tachyon-render = { path = "../tachyon-render" }
tachyon-search = { path = "../tachyon-search" }
tachyon-trace = { path = "../tachyon-trace" }
tracing.workspace = true
tracing-subscriber.workspace = true
