[package]
name = "tachyon-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
directories.workspace = true
eframe.workspace = true
image.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
tachyon-core = { path = "../tachyon-core" }
tachyon-ingest = { path = "../tachyon-ingest" }
tachyon-render = { path = "../tachyon-render" }
tachyon-search = { path = "../tachyon-search" }
tachyon-trace = { path = "../tachyon-trace" }
tracing.workspace = true
tracing-subscriber.workspace = true
