[package]
name = "tachyon-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crossbeam-channel.workspace = true
memchr.workspace = true
rayon.workspace = true
regex.workspace = true
tachyon-core = { path = "../tachyon-core" }
tachyon-ingest = { path = "../tachyon-ingest" }
